# tampermonkey-auto

./: .gitignore  2.ipynb  AGENT.md  AGENTS.md  CHANGELOG.md  CODE-MAIN.md  HANDOFF.md  README.md  ROLE.md  agent_core.py  agents.bat  agents.py  coder.md  config.toml  dashboard.html  diagnostic_controller.py  main.py  mauto_ab_debate.ipynb  mauto_coordinator_blocks.py  mauto_coordinator_live.ipynb  mauto_multirole_diagnostics.ipynb  orches.md  pyproject.toml  role.py  run.ipynb  server.py  solo.bat  solo.py  tampermonkey.js  teams.py  upload_once.py  workflow_engine.py  zipfile_flow.ipynb  zipfile_flow_autofix_log_20260622.md  zipfile_flow_run_log.json
.plan/: 2026-07-08-f5-recovery-plan.md
apps/: bridge.py  browser_transaction.py  cli.py  constants.py  coordinator.py  dryrun.py  flow_store.py  lifecycle.py  models.py  prompts.py  role_renderer.py  route_executor.py  routing.py  runtime_config.py  selftest.py  task_scheduler.py  task_store.py  text.py
prompts/: A.txt  AUDIT.txt  B.txt  C.txt  DEV.txt  FORMAT_REPAIR.txt  G.txt  H.txt  HANDOFF.md  MANAGER.txt  PLAN.txt  REVIEW.txt  ROUTING_CONTRACT.txt  SOLO.txt  SOLO_FOLLOWUP.txt  T.txt  all.txt
skills/: A.md  AUDIT.md  B.md  DEV.md  MANAGER.md  ORCHESTRATOR.md  PLAN.md  REVIEW.md
tests/: test_agent_core.py  test_agents_state.py  test_dashboard_command_parity.py  test_dashboard_contract.mjs  test_diagnostic_controller.py  test_flow_store.py  test_main_flow.py  test_role_cli.py  test_server.py  test_solo_state.py  test_tampermonkey_contract.mjs  test_task_scheduler.py  test_task_store.py  test_teams.py  (+1 more)
(+29 files in other folders)
