[project]
name = "gpt-auto"
version = "0.1.0"
description = "Browser-backed ChatGPT agent runners and diagnostic bridge"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.8",
    "croniter>=6.2.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
